# win_buddy

./: CLAUDE.md  GEMINI.md  GUARDRAILS.md  README.md  WinBuddy.spec  agents.md  build.py  import_toolbars.py  main.py  pyproject.toml  windows_symlinks.bat
.agent/rules/: 03_obs.md  09_python_venv.md
.agent/workflows/: trent-analyze-codebase.md  trent-cleanup.md  trent-git-commit.md  trent-goal-update.md  trent-idea-capture.md  trent-idea-review.md  trent-phase-pivot.md  trent-phase-sync-check.md  trent-review.md  trent-status.md  trent-task-sync-check.md
.claude/: settings.json
.claude/agents/: cursor-cli.md  qa-engineer.md  trent-memory.md  trent-multi-agent.md  trent-task-expander.md  trent-verifier.md
.claude/commands/: trent-analyze-codebase.md  trent-bug-report.md  trent-git-commit.md  trent-go.md  trent-qa-report.md  trent-qa.md  trent-report.md
.claude/hooks/: stop.sh  validate-shell.ps1  vault-sync.ps1
.claude/rules/: silicon_valley_personality.md
.claude/skills/: SKILLS_ORGANIZATION.md
.cursor/agents/: agent-creator.md  backend-developer.md  claude-cli.md  code-reviewer.md  harvest-analyst.md  skill-creator.md  trent-autonomous.md  (+7 more)
.trent/: .project_id  ARCHITECTURE_CONSTRAINTS.md  FILE_REGISTRY.md  IDEA_BOARD.md  MCP_TOOLS_INVENTORY.md  PRD.md  PROJECT_CONTEXT.md  PROJECT_GOALS.md  SPRINT.md  SUBSYSTEMS.md  TASKS.md
.trent_template/: .gitignore  .project_id  BUGS.md  CLEANUP_REPORT.md  IDEA_BOARD.md  PRD.md  SPRINT.md  SUBSYSTEMS.md  SYSTEM_EXPERIMENTS.md
docs/: 20260209_165718_Cursor_BUILD_EXE_GUIDE.md
template_v2/: CLAUDE.md  agents.md
(+406 files in other folders)
