[project]
name = "winbuddy"
version = "0.1.0"
description = "Floating productivity widget with todo list and hexagonal app launcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.10.2",
    "pywin32>=311",
]

[project.scripts]
winbuddy = "main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
